<resources>
    <string name="app_name">SIGAP</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_copyright">
        © 2016 Polres Barito Utara
        \n
        Hak cipta dilindungi oleh UU no.28 tahun 2014
    </string>
    <string name="title_activity_sendbird">SIGAP</string>
    <string name="font_family_ubuntu"></string>
    <string name="title_activity_about_app">Tentang Aplikasi</string>
    <string name="title_activity_about_polres">Tentang Polres</string>
    <string name="title_activity_pengaturan">Pengaturan</string>
    <string name="title_activity_bantuan_terdekat">Bantuan Terdekat</string>
    <string name="title_activity_berita_polres">Berita Polres</string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="title_activity_live_chat_sigap">Live Chat</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_kapolres">Kapolres</string>
    <string name="title_activity_polisi">Polisi</string>
    <string name="title_activity_rs">Rumah Sakit</string>
    <string name="title_activity_damkar">Pemadam Kebakaran</string>
    <string name="title_activity_pelayanan_polres">Pelayanan Polres</string>
    <string name="title_activity_pelayanan_polres_sim">SIM</string>
    <string name="title_activity_pelayanan_polres_skck">SKCK</string>
    <string name="title_activity_pelayanan_polres_sp2hp">SP2HP</string>
    <string name="title_activity_spbu">Pom Bensin</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_signup_verification">Sign up Verification</string>
    <string name="title_activity_tentang_polres">Tentang Polres</string>
    <string name="polres_visi">
        Terwujudnya Polri yang professional, unggul dan dapat dipercaya masyarakat guna mendukung terciptanya kamdagri diwilayah hukum Polres Barito Utara yang berdaulat, mandiri dan berkepribadian dengan berlandaskan gotong royong.
    </string>
    <string name="polres_misi">
        Sebagai organisasi yang bertugas sebagai pelindung, pengayom dan pelayan masyarakat, penegakkan hukum serta pemelihara keamanan dan ketertiban serta keselamatan dan kelancaran lalu lintas menuju kehidupan masyarakat Iya Mulik Bengkang Turan maju dan mandiri : Mewujudkan pemuliaan dan kepercayaan public (trust building) melalui perlindungan, pengayoman, dan pelayanan sampai lini terdepan melalui konsep “Polda cukup-Polres besar-Polsek Kuat”;
        \n1. Mewujudkan pemberdayaan kualitas sumber daya manusia Polres Barito Utara yang profesional, Proporsioanl dan kompeten baik secara kualitas maupun kuantitas dalam rangka mendukung kamtibmas diwilayah hukum Polres Barito Utara.
        \n2. Meningkatkan motivasi dan kesejahteraan personel Polres Barito Utara (well motivated dan welfare);
        \n3. Mewujudkan deteksi aksi melalui kegiatan deteksi dini, peringatan dini dan cegah dini secara cepat akurat dan efektif;
        \n4. Mewujudkan pemeliharaan keamanan dan ketertiban masyarakat dengan pemahaman, kesadaran dan kepatuhan hukum melalui peningkatan peran bhabinkamtibmas dalam mengimplementasikan strategi polmas yang berada di desa/kelurahan serta membangun sinergi polisional yang proaktif dengan kementrian/lembaga.
        \n5. Mewujudkan penegakan hukum yang berkeadilan, menjunjung tinggi HAM, anti KKN dan anti kekerasan diwilayah hukum Polres Barito Utara;
        \n6. Mewujudkan keamanan, keselamatan, ketertiban dan kelancaran berlalu lintas untuk menjamin keselamatan dan kelancaran arus orang dan barang;
        \n7. Mewujudkan keamanan, keselamatan dan ketertiban di kawasan perairan laut dan sungai untuk mendukung visi pembangunan wilayah kemaritiman Polres Barito Utara;
        \n8. Mewujudkan anggota Polri Polres Barito Utara yang kompeten melalui proses assessment, pendidikan dan pelatihan baik dalam maupun luar negeri;
        \n9. Mewujudkan intelejen Kepolisian yang professional dan kompeten dalam upaya pencegahan dini kriminalitas dan pengambilan keputusan yang tepat pada kebijakan keamanan di wilayah hukum Polres Barito Utara.
    </string>
    <string name="polres_struktur_organisasi">
        <a href="http://www.polresbaritoutara.com/images/thumbnails/images/website/struktur-org-revisi-barut-fill-998x1524.jpg">
            Download here
        </a>
    </string>
    <string name="sim_jenis_permohonan">Jenis permohonan :</string>
    <string-array name="sim_jenis_permohonan_list">
        <item>Pilih</item>
        <item>1. Baru</item>
        <item>2. Perpanjangan</item>
        <item>3. Peningkatan golongan</item>
        <item>4. Penurunan golongan</item>
        <item>5. Mutasi</item>
        <item>6. Hilang / rusak</item>
    </string-array>
    <string name="sim_golongansim">Sebutkan golongan SIM yang diminta :</string>
    <string-array name="sim_golongansim_list">
        <item>Pilih</item>
        <item>1. A</item>
        <item>2. C</item>
        <item>3. B I</item>
        <item>4. B II</item>
        <item>5. A Umum</item>
        <item>6. B I Umum</item>
        <item>7. B II Umum</item>
        <item>8. D</item>
    </string-array>
    <string name="sim_namadepan">Nama depan :</string>
    <string name="sim_namabelakang">Nama belakang :</string>
    <string name="sim_jeniskelamin">Jenis kelamin :</string>
    <string name="sim_kewarganegaraan">Kewarganegaraan :</string>
    <string name="sim_tinggibadan">Tinggi badan (cm) :</string>
    <string name="sim_tempatlahir">Tempat lahir :</string>
    <string name="sim_tanggallahir">Tanggal lahir :</string>
    <string-array name="sim_tanggallahir_list_tanggal_30">
        <item>Tanggal</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="sim_tanggallahir_list_tanggal_31">
        <item>Tanggal</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="sim_tanggallahir_bulan">
        <item>Bulan</item>
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>Nopember</item>
        <item>Desember</item>
    </string-array>
    <string name="sim_pekerjaan">Pekerjaan :</string>
    <string-array name="sim_pekerjaan_list">
        <item>Pilih</item>
        <item>1. Pelajar / mhs</item>
        <item>2. Pegawai negeri</item>
        <item>3. ABRI</item>
        <item>4. Swasta</item>
        <item>5. Pengemudi</item>
        <item>6. Lain-lain</item>
    </string-array>
    <string name="sim_alamatlengkap">Alamat lengkap :</string>
    <string name="sim_rtrw">RT/RW, Banjar, Dukuh, Desa, dll. :</string>
    <string name="sim_kota">Kota :</string>
    <string name="sim_kodepos">Kode Pos :</string>
    <string name="sim_nomortelepon">Nomor Telepon :</string>
    <string name="sim_nomorktp">Nomor KTP :</string>
    <string name="sim_namaayah">Nama ayah :</string>
    <string name="sim_namaibu">Nama ibu :</string>
    <string name="sim_pendidikan">Pendidikan :</string>
    <string-array name="sim_pendidikan_list">
        <item>Pilih</item>
        <item>1. Tidak bersekolah</item>
        <item>2. SD / sederajat</item>
        <item>3. SLTP / sederajat</item>
        <item>4. SLTA / sederajat</item>
        <item>5. PT / AKD / sederajat</item>
        <item>6. Dan lain-lain</item>
    </string-array>
    <string name="sim_cacatfisiklain">Cacat fisik lain :</string>
    <string-array name="sim_cacatfisiklain_list">
        <item>Pilih</item>
        <item>1. Tangan</item>
        <item>2. Kaki</item>
        <item>3. Pendengaran</item>
        <item>4. Badan</item>
        <item>5. Tidak ada</item>
    </string-array>
    <string name="app_logout">Keluar sekarang ?</string>
    <string name="police_address">Jl.Kaptean Tanden No.1, Muarateweh, Barito Utara</string>
    <string name="police_button_panic">
        TEKAN TOMBOL 3x\n
        APABILA DALAM KEADAAN DARURAT
    </string>
    <string name="police_call_center">Call Center (0519) 21062</string>
    <string name="police_footer_memo">
        Call Center (0519) 21062\n
        Jl.Kaptean Tanden No.1, Muarateweh\n
        Barito Utara
    </string>
    <string name="police_name">Polres Barito Utara</string>
    <string name="dashboard_title_live_chat">   Live Chat</string>
    <string name="splash_app">
        SIGAP
        \n
        POLRES BARITO UTARA
    </string>
    <string name="splash_thanks">
        Terima kasih telah
        \n
        menggunakan aplikasi
    </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">Polres Barito Utara</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_live_chat">LiveChatActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contact__list">Contact_List</string>
    <string name="title_activity_message__from">Message_From</string>
    <string name="title_activity_new__contact">New_Contact</string>
    <string name="identity_number">Identity Number (Passport/License Driver)</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="no_results_found">No Results Found.</string>
    <string name="text_header">Tekan tombol 3x apabila Anda dalam keadaan darurat</string>
    <string name="delete_image">Delete Image</string>
</resources>