<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/background_01"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <!-- android:background="@drawable/side_nav_bar" -->
    <!-- android:background="#e62129" -->
    <!-- android:theme="@style/ThemeOverlay.AppCompat.Dark" -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logo_new"
        android:adjustViewBounds="true"
        android:gravity="bottom|center_horizontal"
        android:scaleType="fitStart"
        tools:ignore="ContentDescription" />
    <!--
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@android:drawable/sym_def_app_icon"
    -->

    <TextView
        android:id="@+id/label_police_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/police_name"
        android:textColor="#ffffff"
        android:textStyle="normal"
        android:textSize="8pt"
        android:gravity="left|center_vertical"
        android:itemTextAppearance="@style/NavigationDrawerStyle"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/label_police_call_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/police_call_center"
        android:textColor="#ffffff"
        android:textStyle="normal"
        android:textSize="6pt"
        android:itemTextAppearance="@style/NavigationDrawerStyle" />

    <TextView
        android:id="@+id/label_police_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/police_address"
        android:textColor="#ffffff"
        android:textStyle="normal"
        android:textSize="6pt"
        android:itemTextAppearance="@style/NavigationDrawerStyle"/>

</LinearLayout>
