<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about_app2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.sigap.AboutApp2Activity">

    <ImageView
        android:id="@+id/bg_aboutapp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_04"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical">


        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/text_app_name"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="12pt"
                android:textStyle="bold"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/text_app_version"
                android:text="@string/app_version"
                android:textColor="#ffffff"
                android:textSize="6pt"
                android:textStyle="normal"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                app:srcCompat="@drawable/logo_new"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:gravity="bottom|center_horizontal"
                android:id="@+id/img_app_logo"
                tools:ignore="ContentDescription,ObsoleteLayoutParam" />
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/text_app_copyright"
                android:text="@string/app_copyright"
                android:textColor="#ffffff"
                android:textSize="6pt"
                android:textStyle="normal"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/text_app_license"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:text="www.polresbaritoutara.com"
                android:textColor="#ffffff"
                android:textSize="6pt"
                android:textStyle="normal"
                android:gravity="center"/>
        </TableRow>

    </LinearLayout>

</RelativeLayout>
